--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-safe-area-context": "^4.3.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.17.0",
+    "react-native-share": "^7.9.0",
     "react-native-simple-radio-button": "2.7.4",
     "react-native-simple-toast": "^1.1.3",
     "react-native-size-matters": "^0.4.0",
